1999-12-01  Sven Dietrich <sven_dietrich@trimble.com>

	* libntp/recvbuff.c: Unused functions cleanup
	* ntpd/ntpd.c: ProcessorAffinity, IO cleanup
	* ports/winnt/instsrv/instsrv.c: Service name changed to NTP

	NT port shouldn;t hop between CPUs. Set affinity to first processor.
	Service name was NetworkTimeProtocol. Too long. Now NTP.

1999-12-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/driver8.htm: 
	* libparse/clk_computime.c: 
	* libparse/clk_dcf7000.c: 
	* libparse/clk_hopf6021.c: 
	* libparse/clk_meinberg.c: 
	* libparse/clk_rawdcf.c: 
	* libparse/clk_rcc8000.c: 
	* libparse/clk_schmid.c: 
	* libparse/clk_trimtaip.c: 
	* libparse/clk_trimtsip.c: 
	* libparse/data_mbg.c: 
	* libparse/kclk_computime.c: 
	* libparse/kclk_dcf7000.c: 
	* libparse/kclk_hopf6021.c: 
	* libparse/kclk_meinberg.c: 
	* libparse/kclk_rawdcf.c: 
	* libparse/kclk_rcc8000.c: 
	* libparse/kclk_schmid.c: 
	* libparse/kclk_trimtaip.c: 
	* libparse/kclk_trimtsip.c: 
	* libparse/kparse.c: 
	* libparse/kparse_conf.c: 
	* libparse/parse.c: 
	* libparse/parse_conf.c: 
	* libparse/parsesolaris.c: 
	* libparse/parsestreams.c: 
	* ntpd/refclock_parse.c: 
	Mods and updates
	From: Frank Kardel <kardel@acm.org>
	
	* acconfig.h: PCF refclock
	* configure.in: 
	* html/driver35.htm: 
	* html/refclock.htm: 
	* include/ntp.h: 
	* libntp/clocktypes.c: 
	* ntpd/Makefile.am: 
	* ntpd/ntp_control.c: 
	* ntpd/refclock_conf.c: 
	* ntpd/refclock_pcf.c: 
	From: Andreas Voegele <andreas.voegele@gmx.de>
	
	* acconfig.h: DECL_STIME_1

	* configure.in (iCFLAGS): Use -std1 for alpha*-dec-osf* if we are
	using "cc".
	Reported by: Tom Smith <smith@cag.lkg.dec.com>

1999-11-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/l_stdlib.h: DECL_SYSTIME_1 --- a long *
	* configure.in: Use it for DEC OSF[45]
	Reported by: Tom Smith <smith@cag.lkg.dec.com>

	* ntpd/refclock_parse.c: Add missing declarations
	* ntptrace/ntptrace.c: Ditto
	* ntpd/ntp_proto.c: Ditto
	* ntpd/refclock_palisade.c: Ditto